update address mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.queries.roles-query=select u.email, r.role from users u inner join user_r
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=partnersmartit@gmail.com
-spring.mail.password=smartitp2021
+spring.mail.username=alayacompagny@gmail.com
+spring.mail.password=carlouta
 
 
 # Other properties
